[package]
name = "fitchfork-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.4", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
sysinfo = "0.29"
